# ai_poc_crew_ai

./: .gitignore  README.md  pyproject.toml
src/ai_poc_crew_ai/: crew.py  main.py
src/ai_poc_crew_ai/config/: agents.yaml  tasks.yaml
