[project]
name = "ai_poc_crew_ai"
version = "0.1.0"
description = "ai-poc_crew_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
ai_poc_crew_ai = "ai_poc_crew_ai.main:run"
run_crew = "ai_poc_crew_ai.main:run"
train = "ai_poc_crew_ai.main:train"
replay = "ai_poc_crew_ai.main:replay"
test = "ai_poc_crew_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
